Fixed console error for page-scroll links on welcome page and ensured no-badges template is visible

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -744,6 +744,7 @@ section.reset {
 
 section.page {
     margin-top: 180px;
+    padding-bottom: 30px;
 }
 
 section.badges {
@@ -843,10 +844,11 @@ section.collections {
     }
     .sticky .scroll {
         overflow-y: scroll;
-        height: 500px;
-        margin: 30px 0 0px;
-        width: 90%;
+        height: 400px;
+        margin: 30px 0 0;
         padding-right: 25px;
+        position: fixed;
+        width: 38%;
     }
     .group {
         background: white;
